<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="main_settings_title">Scorpion Nest</string>
    <string name="buttons_settings_title">Buttons</string>
    <string name="lights_settings_title">Lights</string>
    <string name="lockscreen_title">Lock Screen</string>
    <string name="misc_settings_title">Miscellaneous</string>
    <string name="navigation_title">Navigation</string>
    <string name="notifications_title">Notification</string>
    <string name="qs_settings_title">Quick Settings</string>
    <string name="recents_settings_title">Recents</string>
    <string name="statusbar_settings_title">Status Bar</string>
    <string name="gesture_preference">AOSP gestures</string>
    <string name="gesture_title">Gestures</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Show charging current, voltage and battery temperature on lockscreen while charging</string>
    <string name="statusbar_items_title">Statusbar items</string>
    <string name="lockscreen_tuner_title">Lockscreen shortcuts</string>
    <string name="navbar_tuner_title">Navbar buttons</string>
    <string name="navigation_summary">Force on screen navbar and customize buttons</string>
    <string name="face_auto_unlock_title">Face auto unlock</string>
    <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>
    <string name="button_settings_title">Buttons</string>
    <string name="button_settings_title_summary">Perform custom button actions</string>
    <string name="button_settings_description">Set custom button actions to several hardware keys presented on your device.</string>
    <string name="navigation_bar_title">Navigation bar</string>
    <string name="navigation_bar_title_summary">Enable on-screen navigation keys</string>
    <string name="hardware_brightness_keys_title">Backlight</string>
    <string name="hardware_brightness_keys_title_summary">Enable navigation keys backlight</string>
    <string name="home_key_title">Home button</string>
    <string name="back_key_title">Back button</string>
    <string name="menu_key_title">Menu button</string>
    <string name="assist_key_title">Assist button</string>
    <string name="app_switch_key_title">Recents button</string>
    <string name="camera_key_title">Camera button</string>
    <string name="short_press_title">Short press action</string>
    <string name="long_press_title">Long press action</string>
    <string name="double_tap_title">Double tap action</string>
    <string name="action_nothing">No action</string>
    <string name="action_menu">Open/close menu</string>
    <string name="action_app_switch">Recents</string>
    <string name="action_search">Search assistant</string>
    <string name="action_voice_search">Voice search</string>
    <string name="action_in_app_search">In-app search</string>
    <string name="action_launch_camera">Open camera</string>
    <string name="action_last_app">Launch last app</string>
    <string name="action_splitscreen">Splitscreen</string>
    <string name="seekbar_no_default_value">No default value set</string>
    <string name="seekbar_default_value_set">Value set to default of <xliff:g id="number">%d</xliff:g></string>
    <string name="seekbar_default_value_already_set">Default value is already set</string>
    <string name="seekbar_default_string">Default</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="allow_incall_home_title">Home button when ringing</string>
    <string name="allow_incall_home_summary">Allow to use Home button when device is ringing</string>
    <string name="anbi_title">Accidental touch</string>
    <string name="anbi_summary">Prevent interaction with navigation buttons while the screen is being touched</string>
    <string name="show_clear_all_recents_button_title">Clear all button</string>
    <string name="show_clear_all_recents_button_summary">Show clear all button</string>
    <string name="recents_clear_all_location_title">Clear all location</string>
    <string name="recents_clear_all_location_top_right">Top right</string>
    <string name="recents_clear_all_location_top_left">Top left</string>
    <string name="recents_clear_all_location_top_center">Top center</string>
    <string name="recents_clear_all_location_bottom_right">Bottom right</string>
    <string name="recents_clear_all_location_bottom_left">Bottom left</string>
    <string name="recents_clear_all_location_bottom_center">Bottom center</string>
    <string name="light_settings_header">Notif. Led Settings</string>
    <string name="battery_light_settings">Battery Charging Light</string>
    <string name="battery_light_summary">Customization for Battery Light</string>
    <string name="battery_light_enable">Enable</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
    <string name="battery_light_low_blinking_title">Blinking light on low battery</string>
    <string name="battery_light_cat">Battery light color when charging</string>
    <string name="battery_light_low_color">Low battery</string>
    <string name="battery_light_medium_color">Medium battery</string>
    <string name="battery_light_full_color">Almost full battery</string>
    <string name="battery_light_reallyfull_color">Full (100) battery</string>
    <string name="notification_light_settings">Notifications Light</string>
    <string name="notification_light_summary">Notif. light customization</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="wakeup_when_plugged_unplugged_title">Wake up on charge</string>
    <string name="wakeup_when_plugged_unplugged_summary">Wake up device if charger is plugged/unplugged.</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Display icon of activity that generates toast message</string>
    <string name="qs_show_brightness_title">Brightness slider</string>
    <string name="qs_show_brightness_summary">Show a brightness slider in the quick settings panel</string>
    <string name="qs_brightness_position_bottom_title">Brightness slider on bottom</string>
    <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
    <string name="fp_unlock_keystore_title">Fingerprint unlock</string>
    <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: at your own risk!</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_stoplist_summary">Disable heads up notifications in these applications</string>
    <string name="add_heads_up_blacklist_summary">Disable heads up from these applications</string>
    <string name="heads_up_stoplist_title">Stoplist</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="heads_up_time_out_title">Time out</string>
    <string name="heads_up_time_out_summary">Peeking notifications will show for <xliff:g id="number">%d</xliff:g> seconds</string>
    <string name="heads_up_time_out_2sec">2 seconds</string>
    <string name="heads_up_time_out_4sec">4 seconds</string>
    <string name="heads_up_time_out_5sec">5 seconds</string>
    <string name="heads_up_time_out_6sec">6 seconds</string>
    <string name="heads_up_time_out_8sec">8 seconds</string>
    <string name="heads_up_time_out_10sec">10 seconds</string>
    <string name="heads_up_snooze_title">Snooze timer</string>
    <string name="heads_up_snooze_summary_one_minute">Swiping up on peeking notifications will snooze heads up from that application for 1 minute</string>
    <string name="heads_up_snooze_summary">Swiping up on peeking notifications will snooze heads up from that application for <xliff:g id="number">%d</xliff:g> minutes</string>
    <string name="heads_up_snooze_disabled_summary">Snooze timer is disabled</string>
    <string name="heads_up_snooze_1min">1 minute</string>
    <string name="heads_up_snooze_5min">5 minutes</string>
    <string name="heads_up_snooze_10min">10 minutes</string>
    <string name="heads_up_snooze_15min">15 minutes</string>
    <string name="heads_up_snooze_20min">20 minutes</string>
    <string name="three_finger_gesture">Swipe to screenshot</string>
    <string name="three_finger_gesture_summary">Swipe three fingers to take screenshot</string>
    <string name="weather_title">Weather</string>
    <string name="weather_config_title">Weather service</string>
    <string name="weather_config_summary">System service settings</string>
    <string name="header_weather_title">Header view weather</string>
    <string name="header_weather_summary">Enable notification panel header weather display</string>
    <string name="weather_icon_pack_title">Condition icon pack</string>
    <string name="weather_icon_pack_note">Note\u003a you can install new icon packs from play store by searching for \"Chronus icons\"</string>
    <string name="weather_icon_pack_info_title">Condition icon pack is used in quick settings and lock screen</string>
    <string name="lockscreen_weather_title">Show weather condition</string>
    <string name="lockscreen_weather_summary">Show current weather condition and temperature</string>
    <string name="lockscreen_items_aod_info_title">This visibility configuration also applies to the ambient display</string>
    <string name="device_title">Device</string>
    <string name="device_summary">Customize alert slider and off screen gestures</string>
    <string name="gesture_settings_title">Navigation Gestures</string>
    <string name="gesture_settings_info">Navigation bar must be disabled!\n\nAvailable gestures:\n\nBack\n- Swipe up on left or right side\n\nHome\n- Swipe up center\n\nRecent apps\n- Swipe up center and hold\n\nLong press home\n- Short swipe up and hold in the center</string>
    <string name="use_bottom_gesture_title">Navigation gestures</string>
    <string name="use_bottom_gesture_summary">Use bottom swipe up gestures for navigation</string>
    <string name="vibration_on_charge_state_changed_title">Vibrate on plug</string>
    <string name="vibration_on_charge_state_changed_summary">Vibrate when connecting or disconnecting a power source</string>
</resources>