<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 InvictusRom

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
        android:title="@string/main_settings_title">

    <!-- Button Settings -->
    <Preference
        android:key="button_settings"
        android:title="@string/button_settings_title"
        android:icon="@drawable/ic_settings_button"
        android:order="-70"
        android:fragment="com.android.settings.gzosp.dashboard.ButtonSettings"
        settings:controller="com.android.settings.gzosp.dashboard.ButtonSettingsPreferenceController"/>

<!--	<PreferenceScreen
		android:fragment="com.nest.settings.ui.LightsSettings"
		android:key="lights_settings"
		android:title="@string/lights_settings_title"/>
-->

	<PreferenceScreen
	    android:fragment="com.nest.settings.ui.GestureSettings"
	    android:key="gesture_settings"
            android:icon="@drawable/ic_settings_gesture"
	    android:title="@string/gesture_title"/>

	<PreferenceScreen
	    android:fragment="com.nest.settings.ui.LockScreenSettings"
	    android:key="lockscreen_settings"
            android:icon="@drawable/ic_settings_lockscreen"
	    android:title="@string/lockscreen_settings_title"/>

	<PreferenceScreen
	    android:fragment="com.nest.settings.ui.MiscSettings"
	    android:key="misc_settings"
            android:icon="@drawable/ic_settings_misc"
	    android:title="@string/misc_settings_title"/>

	<PreferenceScreen
	    android:fragment="com.nest.settings.ui.NavigationBarSettings"
	    android:key="navigationbar_settings"
            android:icon="@drawable/ic_settings_navigation" 
	    android:title="@string/navigation_title"/>

	<PreferenceScreen
	    android:fragment="com.nest.settings.ui.NotificationsSettings"
	    android:key="notification_settings"
            android:icon="@drawable/ic_settings_notifications" 
	    android:title="@string/notifications_title"/>

	<PreferenceScreen
	    android:fragment="com.nest.settings.ui.RecentsSettings"
	    android:key="recents_settings"
            android:icon="@drawable/ic_settings_recents"
	    android:title="@string/recents_settings_title"/>

	<PreferenceScreen
            android:fragment="com.nest.settings.ui.StatusBarSettings"
	    android:key="statusbar_settings"
            android:icon="@drawable/ic_settings_statusbar"
            android:title="@string/statusbar_settings_title"/>

</PreferenceScreen>
